# httptest

./: .gitignore  Cargo.toml  README.md  httptest.sql
src/: api.rs  index.rs  login.rs  logout.rs  main.rs  register.rs
static/css/: login.css
templates/: _footer.html  _header.html  index.html  login.html  register.html
